--- a/frontend/cms/package.json
+++ b/frontend/cms/package.json
@@ -19,6 +19,7 @@
     "@types/styled-components": "^5.1.34",
     "@types/webpack-env": "^1.18.4",
     "antd": "^5.15.3",
+    "axios": "^1.7.1",
     "i18next": "^23.10.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
